hide the altis logo

--- a/web/wp-content/mu-plugins/pantheon-dashboard/assets/sass/base/_theme.scss
+++ b/web/wp-content/mu-plugins/pantheon-dashboard/assets/sass/base/_theme.scss
@@ -1,3 +1,11 @@
+#wp-admin-bar-altis {
+	display: none;
+}
+
+#wp-admin-bar-pantheon img {
+	height: 32px;
+}
+
 .edit-post-layout .components-notice-list,
 .editor-post-title__block .editor-post-title__input,
 .editor-styles-wrapper,
